[package]
name = "dns_lib"
version = "0.12.0"
description = "An implementation of the DNS protocol from scratch based on the many DNS RFCs."

rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]

[dev-dependencies]
rstest = "0.21.0"
